spec/test/_test_case_archive/sample2/data-error/8/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/8 error-8.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/8 ~
##### tecsgen error-8.idl  #####
error-8.idl:7:2: error: G1016 syntax error near '}'
1 error
~
